@@ -22,6 +22,9 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.TreeMap;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -63,35 +66,18 @@ public class ExecutorRegistry {
     private final ConcurrentHashMap<String, AtomicInteger> roundRobin = new ConcurrentHashMap<String, AtomicInteger>();
 
     /** 地址比较器（null 视为最大，防御历史脏数据导致的 NPE） */
-    private static final Comparator<ExecutorNode> BY_ADDRESS = new Comparator<ExecutorNode>() {
-        @Override
-        public int compare(ExecutorNode a, ExecutorNode b) {
-            String x = a.getAddress();
-            String y = b.getAddress();
-            if (x == null && y == null) {
-                return 0;
-            }
-            return x == null ? 1 : (y == null ? -1 : x.compareTo(y));
-        }
-    };
+    private static final Comparator<ExecutorNode> BY_ADDRESS =
+            Comparator.comparing(ExecutorNode::getAddress, Comparator.nullsLast(String::compareTo));
 
     /**
-     * 注册表本地缓存（不可变快照）。volatile 单引用替换，读无锁。
+     * 注册表本地缓存（不可变快照）。JDK 21 record：两个只读组件、无行为，
+     * volatile 单引用替换，读无锁。
      */
-    private static final class RegistrySnapshot {
-        /** 快照失效时刻（epoch 毫秒），到点后下一次读会重建 */
-        final long expiresAtMs;
-        /** 快照内容：按地址升序、已过滤失联节点的不可变列表 */
-        final List<ExecutorNode> nodes;
-
-        /**
-         * @param expiresAtMs 失效时刻（epoch 毫秒）
-         * @param nodes       节点列表，调用方保证不可变
-         */
-        RegistrySnapshot(long expiresAtMs, List<ExecutorNode> nodes) {
-            this.expiresAtMs = expiresAtMs;
-            this.nodes = nodes;
-        }
+    private record RegistrySnapshot(
+            /** 快照失效时刻（epoch 毫秒），到点后下一次读会重建 */
+            long expiresAtMs,
+            /** 快照内容：按地址升序、已过滤失联节点的不可变列表 */
+            List<ExecutorNode> nodes) {
     }
 
     /** 当前生效的缓存快照；null 表示需要重建 */
@@ -191,12 +177,9 @@ public class ExecutorRegistry {
         return deleted;
     }
 
-    /**
-     * 查询全部在线执行器节点（经 TTL 缓存）。
-     * 返回列表为防御性副本，调用方可安全修改。
-     */
+    /** 查询全部在线执行器节点（经 TTL 缓存）。返回列表为防御性副本，调用方可安全修改。 */
     public List<ExecutorNode> listAll() {
-        return new ArrayList<ExecutorNode>(snapshot().nodes);
+        return new ArrayList<ExecutorNode>(snapshot().nodes());
     }
 
     /**
@@ -207,7 +190,7 @@ public class ExecutorRegistry {
             return new ArrayList<ExecutorNode>();
         }
         String target = appName.trim();
-        List<ExecutorNode> all = snapshot().nodes;
+        List<ExecutorNode> all = snapshot().nodes();
         List<ExecutorNode> matched = new ArrayList<ExecutorNode>(all.size());
         for (ExecutorNode n : all) {
             if (target.equals(n.getAppName())) {
@@ -224,35 +207,130 @@ public class ExecutorRegistry {
      *
      * @param candidates 候选节点列表（非空时生效）
      * @param appName    应用名（仅作为轮询游标 key）
-     * @param strategy   路由策略：ROUND / RANDOM / FIRST
+     * @param strategy   路由策略：ROUND / RANDOM / FIRST / CONSISTENT_HASH
      * @return 选中的节点；候选为空时返回 null
      */
     public ExecutorNode route(List<ExecutorNode> candidates, String appName, String strategy) {
+        return route(candidates, appName, strategy, null);
+    }
+
+    /**
+     * 路由选点（完整版本，支持一致性哈希的哈希键）。
+     *
+     * JDK 21 箭头 switch（JEP 441）分发路由策略：
+     * case 标签直接引用 {@link RouteStrategy} 常量（编译期常量），
+     * ROUND 作为 default 分支兜底未知策略（兼容库里已有的历史数据）。
+     *
+     * CONSISTENT_HASH 以 {@code hashKey}（通常为任务名）对虚拟节点环做哈希：
+     * 同一任务在同一候选集合下总是命中同一节点；节点增减时只有少数任务换点。
+     * hashKey 为空时退化为 ROUND —— 一致性哈希没有键就没有意义，但路由不能因此失败。
+     *
+     * @param candidates 候选节点列表（非空时生效）
+     * @param appName    应用名（仅作为轮询游标 key）
+     * @param strategy   路由策略：ROUND / RANDOM / FIRST / CONSISTENT_HASH
+     * @param hashKey    一致性哈希键（通常为任务名；可为空，为空时 CONSISTENT_HASH 退化为 ROUND）
+     * @return 选中的节点；候选为空时返回 null
+     */
+    public ExecutorNode route(List<ExecutorNode> candidates, String appName, String strategy, String hashKey) {
         if (candidates == null || candidates.isEmpty()) {
             return null;
         }
 
-        String s = strategy == null ? RouteStrategy.ROUND : strategy.trim().toUpperCase();
+        // Locale.ROOT：默认 toUpperCase 在土耳其语等 locale 下会把 "first" 变成 "FİRST"
+        String s = strategy == null ? RouteStrategy.ROUND : strategy.trim().toUpperCase(Locale.ROOT);
 
-        if (RouteStrategy.RANDOM.equals(s)) {
-            return candidates.get(ThreadLocalRandom.current().nextInt(candidates.size()));
-        }
+        return switch (s) {
+            case RouteStrategy.RANDOM ->
+                    candidates.get(ThreadLocalRandom.current().nextInt(candidates.size()));
+            // JDK 21 SequencedCollection：getFirst() 替代 get(0)，意图更明确
+            case RouteStrategy.FIRST -> candidates.getFirst();
+            case RouteStrategy.CONSISTENT_HASH ->
+                    hashKey == null || hashKey.trim().isEmpty()
+                            ? roundRobinPick(candidates, appName)
+                            : consistentHashPick(candidates, hashKey);
+            default -> roundRobinPick(candidates, appName);
+        };
+    }
 
-        if (RouteStrategy.FIRST.equals(s)) {
-            return candidates.get(0);
-        }
-
-        // ROUND（未知策略同样按轮询处理，兼容库里已有的历史数据）
+    /**
+     * 轮询选点：游标只在选中 ROUND（或一致性哈希的无键退化）时推进，
+     * 避免与 RANDOM/FIRST 混用时游标漂移。
+     */
+    private ExecutorNode roundRobinPick(List<ExecutorNode> candidates, String appName) {
         AtomicInteger cursor = roundRobin.computeIfAbsent(appName, k -> new AtomicInteger(0));
-        int idx = Math.floorMod(cursor.getAndIncrement(), candidates.size());
-        return candidates.get(idx);
+        return candidates.get(Math.floorMod(cursor.getAndIncrement(), candidates.size()));
+    }
+
+    /** 一致性哈希每节点的虚拟节点数：XXL-JOB 同款量级，均衡性与环重建成本的折中 */
+    private static final int VIRTUAL_NODES = 160;
+
+    /**
+     * 一致性哈希选点：虚拟节点环 + FNV-1a 哈希。
+     *
+     * 实现：每个候选地址在环上展开 {@link #VIRTUAL_NODES} 个虚拟节点
+     * （键 = hash(地址 + "#VN" + 序号)），任务键命中环上第一个 ≥ hash(hashKey) 的节点。
+     * 环在每次派发时重建 —— 候选量级为在线节点数（通常几十），160×N 次
+     * TreeMap.put 的开销在派发热路径上可忽略（相对一次 HTTP 触发往返），
+     * 换来的是无状态、无失效一致性问题。
+     *
+     * 哈希函数用 FNV-1a 64 位 + splitmix64 雪崩混淆：纯算术运算，跨 JVM 结果确定，
+     * 不依赖任何库；顺序命名的任务键同样均匀分布（见 mix64 注释）。
+     * 64 位空间下虚拟节点键的碰撞概率可忽略，碰撞时 TreeMap put 后写者覆盖，
+     * 影响仅限单个虚拟节点的归属，不破坏整体均匀性。
+     *
+     * @param candidates 候选节点列表（非空）
+     * @param hashKey    哈希键（非空）
+     * @return 命中的节点
+     */
+    private static ExecutorNode consistentHashPick(List<ExecutorNode> candidates, String hashKey) {
+        TreeMap<Long, ExecutorNode> ring = new TreeMap<Long, ExecutorNode>();
+        for (ExecutorNode node : candidates) {
+            String address = node.getAddress() == null
+                    ? String.valueOf(node.getNodeId()) : node.getAddress();
+            for (int i = 0; i < VIRTUAL_NODES; i++) {
+                ring.put(fnv1a64(address + "#VN" + i), node);
+            }
+        }
+        Map.Entry<Long, ExecutorNode> hit = ring.ceilingEntry(fnv1a64(hashKey));
+        if (hit == null) {
+            // 哈希值落在环尾：环绕到第一个节点
+            hit = ring.firstEntry();
+        }
+        return hit.getValue();
+    }
+
+    /** FNV-1a 64 位哈希 + splitmix64 雪崩混淆（offset basis = 0xcbf29ce484222325，prime = 0x100000001b3） */
+    private static long fnv1a64(String input) {
+        long hash = 0xcbf29ce484222325L;
+        for (int i = 0; i < input.length(); i++) {
+            hash ^= input.charAt(i);
+            hash *= 0x100000001b3L;
+        }
+        return mix64(hash);
+    }
+
+    /**
+     * splitmix64 终末混淆：消除 FNV-1a 对顺序键的簇聚。
+     *
+     * 必须要有这一步：FNV-1a 逐字符乘素数，对仅末尾字符不同的顺序键（如 job-1 / job-2），
+     * 哈希差值约等于素数本身的量级（~1e12），相对 2^64 环面是极小的一段弧 ——
+     * 任务名连续编号时全部落在同一二三个节点上，一致性哈希失去均衡性。
+     * 终末混淆把每一位的差异充分扩散到全 64 位，顺序键同样均匀分布。
+     */
+    private static long mix64(long x) {
+        x ^= x >>> 33;
+        x *= 0xff51afd7ed558ccdL;
+        x ^= x >>> 33;
+        x *= 0xc4ceb9fe1a85ec53L;
+        x ^= x >>> 33;
+        return x;
     }
 
     /**
      * 在线执行器节点数（经 TTL 缓存，避免 overview/探针高频 count 查询）。
      */
     public int onlineCount() {
-        return snapshot().nodes.size();
+        return snapshot().nodes().size();
     }
 
     // ============================ 缓存内部实现 ============================
@@ -268,12 +346,12 @@ public class ExecutorRegistry {
             // 缓存关闭：每次直查数据库
             return loadSnapshot(0);
         }
-        if (c != null && c.expiresAtMs > System.currentTimeMillis()) {
+        if (c != null && c.expiresAtMs() > System.currentTimeMillis()) {
             return c;
         }
         synchronized (cacheLock) {
             c = cache;
-            if (c != null && c.expiresAtMs > System.currentTimeMillis()) {
+            if (c != null && c.expiresAtMs() > System.currentTimeMillis()) {
                 return c;
             }
             c = loadSnapshot(ttl);
@@ -288,7 +366,7 @@ public class ExecutorRegistry {
      * 排序只在内存做一次：BY_ADDRESS 对 null 地址有确定语义，而各数据库 ASC 的 NULL 位置并不一致，
      * 交给 SQL 排反而要额外约束；在线节点数量级为几十到几百，内存排序成本可忽略。
      *
-     * @param ttl 缓存有效期（毫秒）；&lt;=0 表示不做缓存复用
+     * @param ttl 缓存有效期（毫秒）；小于等于 0 表示不做缓存复用
      */
     private RegistrySnapshot loadSnapshot(long ttl) {
         List<OrbitExecutorRegistryPO> rows = mapper.selectList(
@@ -364,7 +442,8 @@ public class ExecutorRegistry {
             }
             List<String> shrink = new ArrayList<String>(src);
             while (!shrink.isEmpty()) {
-                shrink.remove(shrink.size() - 1);
+                // JDK 21 SequencedCollection：removeLast() 替代 remove(size() - 1)
+                shrink.removeLast();
                 s = json.writeValueAsString(shrink);
                 if (s.length() <= ColumnLimits.REG_HANDLERS_JSON) {
                     log.warn("[orbit-admin] handlers json exceeds column width {}, truncated to {} entries",
